syntax = "proto3";

option java_package = "com.example";

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}

service HelloService {
    rpc SayHello1 (HelloRequest) returns (HelloResponse) {
    }
    rpc SayHello2 (HelloRequest) returns (stream HelloResponse) {
    }
    rpc SayHello3 (stream HelloRequest) returns (HelloResponse) {
    }
    rpc SayHello4 (stream HelloRequest) returns (stream HelloResponse) {
    }
}
